# cabal-issue-repro

./: CHANGELOG.md  LICENSE  README.md  bad-cabal.cabal  cabal.project.freeze
app/: Main.hs
