cabal-version:      3.0
name:               bad-cabal
version:            0.1.0.0
synopsis:           An example of cabal-install generating bad error message
-- description:
license:            MIT
license-file:       LICENSE
author:             Andrew Shulaev
maintainer:         ash.drone@gmail.com
-- copyright:
category:           repro project
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bad-cabal
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
        , lsp
        , lsp-types
    hs-source-dirs:   app
    default-language: GHC2021
